{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 73,
  "lineage": "b1e17e30-9c94-14c4-ecbb-95abfa104697",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:internet-gateway/igw-03b86436e925fc0b9",
            "id": "igw-03b86436e925fc0b9",
            "owner_id": "014498620948",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-eks-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-igw",
              "Owner": "platform",
              "Project": "mlops"
            },
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b86436e925fc0b9",
            "id": "r-rtb-0c8e86cca4f7566f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8e86cca4f7566f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:route-table/rtb-0c8e86cca4f7566f0",
            "id": "rtb-0c8e86cca4f7566f0",
            "owner_id": "014498620948",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "mlops-eks-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-public-rt",
              "Owner": "platform",
              "Project": "mlops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a517662990aa0c2a",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8e86cca4f7566f0",
            "subnet_id": "subnet-0e4aa361d334526a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcbe6b613f0be583",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8e86cca4f7566f0",
            "subnet_id": "subnet-07ab564eb55e5605e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group/sg-0b7411ace9eeec53f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b7411ace9eeec53f",
            "ingress": [],
            "name": "mlops-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "014498620948",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-cluster-sg",
              "Owner": "platform",
              "Project": "mlops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "014498620948",
            "id": "sg-0b7411ace9eeec53f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group/sg-058145b6e4c5c2da1",
            "description": "EKS nodes security group",
            "egress": [],
            "id": "sg-058145b6e4c5c2da1",
            "ingress": [],
            "name": "mlops-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "014498620948",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-nodes-sg",
              "Owner": "platform",
              "Project": "mlops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "014498620948",
            "id": "sg-058145b6e4c5c2da1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:subnet/subnet-0e4aa361d334526a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4aa361d334526a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014498620948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-eks-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-public-us-east-1a",
              "Owner": "platform",
              "Project": "mlops",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "014498620948",
            "id": "subnet-0e4aa361d334526a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:subnet/subnet-07ab564eb55e5605e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ab564eb55e5605e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014498620948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-eks-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-public-us-east-1b",
              "Owner": "platform",
              "Project": "mlops",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0be986b9d4917b2be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "014498620948",
            "id": "subnet-07ab564eb55e5605e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:vpc/vpc-0be986b9d4917b2be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042f519931d16780f",
            "default_route_table_id": "rtb-0f596304627a78056",
            "default_security_group_id": "sg-0534f2417f93902f5",
            "dhcp_options_id": "dopt-0a057a4637adf2256",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be986b9d4917b2be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f596304627a78056",
            "owner_id": "014498620948",
            "region": "us-east-1",
            "tags": {
              "Name": "mlops-eks-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "mlops-eks-vpc",
              "Owner": "platform",
              "Project": "mlops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "cluster_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group-rule/sgr-032aabf793ef05cac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-032aabf793ef05cac",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b7411ace9eeec53f",
            "security_group_rule_id": "sgr-032aabf793ef05cac",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "mlops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "nodes_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group-rule/sgr-085745cddbde02635",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-085745cddbde02635",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-058145b6e4c5c2da1",
            "security_group_rule_id": "sgr-085745cddbde02635",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "mlops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "cluster_from_nodes_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group-rule/sgr-03082058facaf33d8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Nodes to control plane",
            "from_port": 443,
            "id": "sgr-03082058facaf33d8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-058145b6e4c5c2da1",
            "region": "us-east-1",
            "security_group_id": "sg-0b7411ace9eeec53f",
            "security_group_rule_id": "sgr-03082058facaf33d8",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "mlops"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nodes_from_cluster_10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group-rule/sgr-09e251b1f71f903eb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Control plane to kubelet",
            "from_port": 10250,
            "id": "sgr-09e251b1f71f903eb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b7411ace9eeec53f",
            "region": "us-east-1",
            "security_group_id": "sg-058145b6e4c5c2da1",
            "security_group_rule_id": "sgr-09e251b1f71f903eb",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "mlops"
            },
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nodes_from_nodes_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014498620948:security-group-rule/sgr-07b4312f1b86c3276",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Node to node",
            "from_port": null,
            "id": "sgr-07b4312f1b86c3276",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-058145b6e4c5c2da1",
            "region": "us-east-1",
            "security_group_id": "sg-058145b6e4c5c2da1",
            "security_group_rule_id": "sgr-07b4312f1b86c3276",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "platform",
              "Project": "mlops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}